rusty-cdk-macros/tests/fails/string_with_only_alphanumerics_underscores_and_hyphens_invalid_chars.rs
use rusty_cdk_macros::string_with_only_alphanumerics_underscores_and_hyphens;

fn main() {
    string_with_only_alphanumerics_underscores_and_hyphens!("with spaces");
}
